--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="crime_suspect_text">Choose Suspect</string>
     <string name="crime_report_text">Send Crime Report</string>
     <string name="delete_crime">Delete Crime</string>
+    <string name="formatted_date">"EEEE, MMM d, yyyy"</string>
     <string name="crime_report">%1$s!
 The crime was discovered on %2$s. %3$s, and %4$s
 </string>
